feat: update Java pattern matching instructions with finalization details and version requirements